update post and theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,16 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+name : Kaitu
+markdown : redcarpet2
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables",     "with_toc_data"]
 pygments: true
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
+
 title : KaiTu
 tagline: Computer Science Algorithm
 author : 
