--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 name : Kaitu
-markdown : redcarpet
+# markdown : redcarpet
+markdown : kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables",     "with_toc_data"]
 pygments: true
